--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,25 +8,44 @@
   </head>
 <body>
   <div class="container">
-    <div class="row">
 
-        <h3 class="h3"> A Simple ToDo List App </h3>
+      <br>
+        <h3 style="font-weight: bold;"> A Simple ToDo List App </h3>
 
-    </div>
-<div>
+        <br>
+
+  <div class="row">
+
 <form action ="/addtask" method="POST">
-  <div class="row"><div class="col-md-7"> <input class="form-control" type="text" name="newtask" placeholder="add new task"> </div> <div class="col-md-5">      <button class="btn btn-primary"> Add Task </button></div>
-<h3> Pending Task </h3>
-<% for( var i = 0; i < task.length; i++){ %>
- <div class="card-pending"><li class="mylist"><input type="checkbox" name="check" value="<%= task[i] %>" /> <%= task[i] %> </li></div> 
-  <% } %>
-<button formaction="/removetask" type="submit"> Remove </button>
-</form>
-<h3> Completed task </h3>
+  <div class="row"><div class="col-md-7"> <input class="form-control" type="text" name="newtask" placeholder="add new task"> </div> <div class="col-md-5">      <button class="btn btn-primary"> Add Task </button></div></div>
+<br>
+  <div class="row"><div class="col-md-6">
 
-<% for(var i = 0; i < complete.length; i++){ %>
- <div class="card-complete"><li class="mylist"><input type="checkbox" checked><%= complete[i] %> </li></div> 
-<% } %>
+    <h6 class="display-4"> Pending Task </h6>
+    <% for( var i = 0; i < task.length; i++){ %>
+     <div class="card-pending"><li class="mylist"><input type="checkbox" name="check" value="<%= task[i] %>" /> <%= task[i] %> </li></div> 
+      <% } %>
+      <br>
+    <button formaction="/removetask" type="submit" class="btn btn-primary"> Mark Complete </button>
+    </form>
+
+
+  </div>
+
+  <div class="col-md-6">
+
+    <h6 class="display-4"> Completed task </h6>
+
+    <% for(var i = 0; i < complete.length; i++){ %>
+     <div class="card-complete"><li class="mylist"><input type="checkbox" checked> <%= complete[i] %> </li></div> 
+    <% } %>
+
+  </div>
+
+</div>
+
+
+</div>
 </div>
 </div>
 </body>
