--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <div class="container">
 
       <br>
-        <h3 style="font-weight: bold;"> A Simple ToDo List App </h3>
+        <h3 style="font-weight: bold;"> ToDo List App </h3>
 
         <br>
 
